force-app/main/default/objects/Application_Trace_Log__b/Application_Trace_Log__b.object-meta.xml
<CustomObject>
    <description>Exception logging, from batch and web services.</description>
    <label>Application Trace Log</label>
    <pluralLabel>Application Trace Logs</pluralLabel>
</CustomObject>