force-app/main/default/objects/Application_Trace_Log__b/fields/Attributes__c.field-meta.xml
<CustomField>
    <fullName>Attributes__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Additional information about the specific event occurrence. Unlike the Resource field, which is fixed for a particular source, Attributes can vary for each occurrence of the event coming from the same source. Can contain information about the request context (other than TraceId/SpanId). Should follow Open Telemetry semantic conventions for Attributes. This field is optional.</description>
    <label>Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>