force-app/main/default/objects/Application_Trace_Log__b/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>A value containing the body of the log record. Can be for example a human-readable string message (including multi-line) describing the event in a free form or it can be a structured data composed of arrays and maps of other values. Can vary for each occurrence of the event coming from the same source. This field is optional</description>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>