force-app/main/default/objects/Application_Trace_Log__b/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Short event identifier that does not contain varying parts. Name describes what happened (e.g. &quot;ProcessStarted&quot;). Recommended to be no longer than 50 characters. Not guaranteed to be unique in any way. Typically used for filtering and grouping purposes in backends. This field is optional.</description>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>