force-app/main/default/objects/Application_Trace_Log__b/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Describes the source of the log, aka resource. Multiple occurrences of events coming from the same event source can happen across time and they all have the same value of Resource. Can contain for example information about the application that emits the record or about the infrastructure where the application runs. Data formats that represent this data model may be designed in a manner that allows the Resource field to be recorded only once per batch of log records that come from the same source. Should follow Open Telemetry semantic conventions for Resources. This field is optional.</description>
    <label>Resource</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>