force-app/main/default/objects/Application_Trace_Log__b/fields/Severity_Number__c.field-meta.xml
<CustomField>
    <fullName>Severity_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Severity Number is an integer number. Smaller numerical values correspond to less severe events (such as debug events), larger numerical values correspond to more severe events (such as errors and critical events)</description>
    <label>Severity Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>