force-app/main/default/objects/Application_Trace_Log__b/fields/Severity_Text__c.field-meta.xml
<CustomField>
    <fullName>Severity_Text__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Severity text (also known as log level). This is the original string representation of the severity as it is known at the source. If this field is missing and SeverityNumber is present then the short name that corresponds to the SeverityNumber may be used as a substitution. This field is optional.</description>
    <label>Severity Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>