force-app/main/default/objects/Application_Trace_Log__b/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Time when the event occurred measured by the origin clock. This field is optional, it may be missing if the timestamp is unknown.</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>